<resources>
    <string name="app_name">Labo05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billboard_text_view">Billboard</string>
    <string name="star_wars_3_title_text_view">Star Wars episodio 3: La venganza de los sith</string>
    <string name="star_wars_rating_text_view">9.8</string>
    <string name="harry_potter_movie_title">Harry Potter y la Piedra Filosofal</string>
    <string name="harry_potter_rating">9.5</string>
    <string name="ciencia_ficci_n">Ciencia Ficción</string>
    <string name="new_movie">New Movie</string>
    <string name="input_field_name">Nombre</string>
    <string name="cat_input_field">Categoria</string>
    <string name="descripcion">Descripcion</string>
    <string name="clasificacion">Clasificacion</string>
    <string name="submit_action">Submit</string>
</resources>