<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movie.billboardFragment"
    android:background="@color/backgroundLayout">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billboard_text_view"
        android:textColor="@color/white"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/star_wars_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:backgroundTint="@color/cardLayout"
        android:padding="@dimen/general_padding"
        android:layout_margin="@dimen/general_card_margin"
        app:cardCornerRadius="@dimen/corner_radius">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/starWarsImageView"
                android:layout_width="@dimen/image_height"
                android:layout_height="@dimen/image_width"
                android:src="@drawable/star_wars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/layout_margin"/>

            <TextView
                android:id="@+id/star_wars_title_text_view"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/star_wars_3_title_text_view"
                android:textColor="@color/white"
                android:textSize="@dimen/movie_title_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/starWarsImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/star_wars_rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/star_wars_rating_text_view"
                android:textColor="@color/calification"
                android:textSize="@dimen/rating_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/starWarsImageView"
                app:layout_constraintTop_toBottomOf="@+id/star_wars_title_text_view"
                app:layout_constraintHorizontal_bias="0.2"
                android:layout_marginStart="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/harry_potter_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star_wars_card"
        android:backgroundTint="@color/cardLayout"
        android:padding="5dp"
        android:layout_margin="10sp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/harryPotterImageView"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/harry_potter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/harry_potter_title_text_view"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:text="@string/harry_potter_movie_title"
                android:textColor="@color/white"
                android:textSize="@+id/star_wars_title_text_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/harryPotterImageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/harry_ptter_rating_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harry_potter_rating"
                android:textColor="@color/calification"
                android:textSize="@dimen/rating_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/harryPotterImageView"
                app:layout_constraintTop_toBottomOf="@+id/harry_potter_title_text_view"
                app:layout_constraintHorizontal_bias="0.2"
                android:layout_marginStart="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>
    

</androidx.constraintlayout.widget.ConstraintLayout>